--- a/examples/example1/package.json
+++ b/examples/example1/package.json
@@ -4,6 +4,6 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "traaittcash-wallet-backend": "https://github.com/trrxitte/traaittcash-wallet-backend-js"
+    "xte-wallet-backend": "https://github.com/trrxitte/xte-wallet-backend-js"
   }
 }
